--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DZ_1_6Kitsu</string>
     <string name="todo">TODO</string>
+    <string name="anime">Anime</string>
+    <string name="manga">Manga</string>
 </resources>
